--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "convis",
   "version": "1.0.0",
   "scripts": {
-      "run": "babel-node index.js",
-      "build:js": "babel src --out-dir dist"
+    "run": "babel-node index.js",
+    "build:js": "webpack"
   },
   "description": "接続を直感的に行い、接続のイベントを提供するためのライブラリです。",
   "main": "index.js",
@@ -12,6 +12,8 @@
   "private": false,
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^3.9.1"
   }
 }
