--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "run": "babel-node index.js",
-    "build:js": "webpack"
+    "build:js": "webpack",
+    "lint": "eslint ./src/**/*.js",
+    "watch": "watch 'npm run lint && npm run build:js' ./src"
   },
   "description": "接続を直感的に行い、接続のイベントを提供するためのライブラリです。",
   "main": "index.js",
@@ -14,6 +16,8 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.12.1",
+    "watch": "^1.0.2",
     "webpack": "^3.9.1"
   }
 }
