--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "run": "babel-node index.js",
+    "test": "ava --verbose",
     "build:js": "webpack",
-    "lint": "eslint ./src/**/*.js",
+    "lint": "eslint ./src/**/*.js ./test/**/*.js",
     "watch": "watch 'npm run lint && npm run build:js' ./src"
   },
   "description": "接続を直感的に行い、接続のイベントを提供するためのライブラリです。",
@@ -13,11 +14,22 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.12.1",
+    "sinon": "^4.1.2",
     "watch": "^1.0.2",
     "webpack": "^3.9.1"
+  },
+  "ava": {
+      "files": [
+          "test/**/*.js"
+      ],
+      "require": [
+          "babel-register"
+      ],
+      "babel": "inherit"
   }
 }
