テストを追加

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
       "files": [
           "test/**/*.js"
       ],
+      "source": [
+          "src/**/*.js"
+      ],
       "require": [
           "babel-register"
       ],
